syntax = "proto3";
import "services/chord_service/chord_messages.proto";
import "google/protobuf/empty.proto";
package chord;

service Chord {
    rpc FindSuccessor (ID) returns (Node);
    rpc Notify (Node) returns (google.protobuf.Empty);
    rpc GetPredecessor (google.protobuf.Empty) returns (Node);
    rpc GetSuccessorsList (google.protobuf.Empty) returns (Nodes);
}

